Fixed job view card to not be hidden under header

--- a/src/scenes/search/components/ViewJob/theme.css
+++ b/src/scenes/search/components/ViewJob/theme.css
@@ -11,6 +11,7 @@
   box-shadow: 0 3px 6px 0 var(--sd-shadowColor);
   background: white;
   border-radius: 4px;
+  margin-top: 106px;
   margin-bottom: 4em;
 
   p {
